Commit test data
For some reason I excluded in the past. Ooops!

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 target
 # Random junk / debug data I have in my project folder
 *.dat
-test*
+testmvnlocal
+testrepo
 
 # PlantUML generated files
 design/*.png
